--- a/style.css
+++ b/style.css
@@ -38,3 +38,14 @@ footer {
   grid-area: 3 / 1 / 4/ 3;
   background-color: brown;
 }
+
+/* main styles */
+
+#img-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#img-container img {
+  width: 30%;
+}
